adding jwt layer